[package]
name = "miband-totp-astrobox-plugin-v2"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
astrobox-ng-wit = { path = "vendor/astrobox-ng-wit" }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
rqrr = "0.9"
